<resources>
    <string name="app_name">AI Infrared</string>
    <string name="title_device">Device</string>
    <string name="title_people">ID Management</string>
    <string name="title_notification">Records</string>
    <string name="title_settings">Settings</string>

    <string name="name">Name</string>
    <string name="save">Save</string>
    <string name="next">Next</string>
    <string name="cancel">Cancel</string>
    <string name="remove">Remove</string>
    <string name="submit">Submit</string>
    <string name="ok">OK</string>

    <string name="update_successfully">Update Successful</string>
    <string name="create_successfully">create successfully</string>
    <string name="remove_successfully">remove successfully</string>

    <string name="number_error">wrong format of number</string>
    <!-- device -->
    <string name="hint_input_device_name">please enter device name</string>
    <string name="hint_device_overwrite">Device had paired, will overwrite setting</string>
    <string name="unable_to_connect_to_device">unable to connect to device...</string>
    <string name="add_first_device">add first device</string>
    <string name="device_connected_click_to_watch_camera">Device connected</string>
    <string name="device_not_connected_yet">Device Not Connected</string>
    <string name="confirm_remove_device">Confirm Device Removal?</string>
    <string name="dialog_add_device">Add Device</string>
    <string name="dialog_connect_hotspot">Connect to Hotspot...</string>
    <string name="dialog_sync_device_title">Add profile</string>
    <string name="dialog_sync_device_message">Can not add the profile to the following devices:\n</string>
    <string name="device_offline">Device is offline</string>

    <!-- device relative -->
    <!-- wifi -->
    <string name="switch_to_hotspot_successfully">switch to hotspot successfully</string>
    <string name="hint_input_wifi_password">please enter Wi-Fi password</string>
    <string name="reset_to_hotspot">Reset to hotspot</string>

<!--    <string name="error_load_image">failed to load image</string>-->
<!--    <string name="please_select_image">please select image</string>-->
<!--    <string name="please_enter_name">please enter name</string>-->
<!--    <string name="please_not_enter_special_characters">please not enter special characters:-->
<!--        .{}</string>-->
<!--    <string name="confirm_remove_data">Are you sure to delete it?</string>-->
    <string name="title_alert_notification">Notification</string>
    <string name="qrcode_invalid">QRCode is invalid</string>

    <!-- calibration -->
    <string name="error_load_rgb_image">failed to load rgb image</string>
    <string name="error_load_thermal_image">failed to load thermal image</string>
    <string name="error_load_image">failed to load image</string>
    <string name="calibration">Calibration</string>

    <!-- record -->
    <string name="record_filter_error_date">All fields in Datetime are necessary</string>
    <string name="record_filter_error_temperature">Please check the input of temperature</string>
    <string name="record_filter_picker">Choose a value :</string>
    <string name="record_filter_toolbar_title">Record Filter</string>
    <string name="record_filter_datetime">Datetime</string>
    <string name="record_filter_start_time">start time</string>
    <string name="record_filter_end_time">end time</string>
    <string name="record_filter_face_mask">Face Mask</string>
    <string name="record_filter_all">All</string>
    <string name="record_filter_yes">Yes</string>
    <string name="record_filter_no">No</string>
    <string name="record_filter_celsius">°C</string>
    <string name="record_filter_fahrenheit">°F</string>
    <string name="record_filter_temperature">Temperature</string>
    <string name="record_filter_to">to</string>
    <string name="record_filter_max">Max</string>
    <string name="record_filter_min">Min</string>
    <string name="record_filter_apply">Apply</string>
    <string name="record_filter_person_name">person name</string>
    <string name="record_filter_date_range">date range</string>

    <!-- activity -->
    <string name="activity_hotspot_title">Hotspots</string>
    <string name="activity_hotspot_scan_wifi_failed">Failed to scan Wi-Fi</string>
    <string name="activity_hotspot_no_wifi_scanned">There is no Wi-Fi scanned</string>
    <string name="activity_lan_devices_title">Connected Devices</string>
    <string name="activity_scan_prompt">Scan device QRCode</string>
    <string name="activity_scan_cancelled">Cancelled</string>
    <string name="activity_device_settings_toast1">Error: no specified device</string>
    <string name="activity_device_settings_toast2">Error: device not found</string>
    <string name="activity_device_settings_toast3">Error: device setting not found</string>
    <string name="activity_device_settings_tab1">Alarm</string>
    <string name="activity_device_settings_tab2">Deviation</string>
    <string name="activity_device_settings_item1">Face Recognition</string>
    <string name="activity_device_settings_item2">Flip Image</string>
    <string name="activity_device_settings_item3">Only ROI</string>
    <string name="activity_device_settings_title">Device Settings</string>
    <string name="activity_streaming_thermal">Thermal</string>
    <string name="activity_editor_toast1">failed to init sdk</string>
    <string name="activity_editor_toast2">Please check your input information</string>
    <string name="toast_no_connected_device">no connected device</string>
    <string name="activity_editor_toast4">no face detected</string>
    <string name="activity_wifi_list_toast1">Error to switch to Wi-Fi</string>
    <string name="activity_wifi_list_toast2">Error: failed to switch to specified Wi-Fi</string>
    <string name="activity_wifi_list_toast3">Error: failed to set specified Wi-Fi</string>
    <string name="activity_network_settings_toast1">Error: no Wi-Fi specified</string>
    <string name="toast_no_specified_device">Error: no device specified</string>
    <string name="activity_network_settings_toast3">Error: no old ip specified</string>
    <string name="activity_network_settings_toast5">Succeed switch Wi-Fi!</string>
    <string name="activity_network_settings_toast6">Error to switch to Wi-Fi (ACK)</string>
    <string name="activity_notification_toast1">Error: no notification data</string>
    <string name="activity_notification_name">Name:</string>
    <string name="activity_notification_temperature">Temperature:</string>
    <string name="activity_notification_time">Time:</string>
    <string name="activity_notification_mask">Mask:</string>
    <string name="activity_launch_toast">Miss permission, but You require never ask permission again</string>
    <string name="activity_editor_name">Name</string>
    <string name="activity_editor_age">Age</string>
    <string name="activity_editor_gender">Gender</string>
    <string name="activity_editor_id">Employee ID</string>
    <string name="activity_editor_birthday">Birthday</string>
    <string name="activity_editor_remark">Remark</string>
    <string name="activity_editor_required">*Required</string>
    <string name="activity_editor_invalid_age">Error: Invalid Age</string>
    <string name="activity_editor_male">Male</string>
    <string name="activity_editor_female">Female</string>
    <string name="activity_editor_title">Add Profile</string>
    <string name="activity_people_list_name">Name:</string>
    <string name="activity_people_list_age">Age:</string>
    <string name="activity_people_list_gender">Gender:</string>
    <string name="profile_fragment_title">Device</string>
    <string name="activity_live_view">Live View</string>


    <!-- fragment -->
    <string name="fragment_device_more">More</string>
    <string name="fragment_device_menu_setting">Device Setting</string>
    <string name="fragment_device_menu_wifi">Wi-Fi Setting</string>
    <string name="fragment_device_menu_remove">Remove</string>
    <string name="fragment_device_toast">device not connected</string>
    <string name="fragment_app_setting">Heat Notification</string>


    <!-- notification -->
    <string name="notification_center_text">Heat detected.</string>

</resources>
