<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_device">

    <fragment
        android:id="@+id/navigation_device"
        android:name="com.ulsee.thermalapp.ui.device.ListFragment"
        android:label="@string/title_device"
        tools:layout="@layout/fragment_device_list" />

    <fragment
        android:id="@+id/navigation_people"
        android:name="com.ulsee.thermalapp.ui.people.ProfileFragment"
        android:label="@string/title_people"
        tools:layout="@layout/fragment_people_list" >
<!--        <action-->
<!--            android:id="@+id/action_to_navigation_people_list"-->
<!--            app:destination="@id/navigation_people_list" />-->
    </fragment>

    <fragment
        android:id="@+id/navigation_notification"
        android:name="com.ulsee.thermalapp.ui.notification.ListFragment"
        android:label="@string/title_notification"
        tools:layout="@layout/fragment_notification_list" >
<!--        <action-->
<!--            android:id="@+id/action_to_navigation_record_list"-->
<!--            app:destination="@id/navigation_record_list" />-->
    </fragment>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.ulsee.thermalapp.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

<!--    <fragment-->
<!--        android:id="@+id/navigation_people_list"-->
<!--        android:name="com.ulsee.thermalapp.ui.people.ProfileFragment"-->
<!--        android:label="@string/title_people"-->
<!--        tools:layout="@layout/fragment_people_list" >-->
<!--        <argument-->
<!--            android:name="deviceID"-->
<!--            app:argType="string"-->
<!--            android:defaultValue="" />-->
<!--        <argument-->
<!--            android:name="deviceName"-->
<!--            app:argType="string"-->
<!--            android:defaultValue="" />-->
<!--    </fragment>-->
<!---->
<!--    <fragment-->
<!--        android:id="@+id/navigation_record_list"-->
<!--        android:name="com.ulsee.thermalapp.ui.notification.ListFragment"-->
<!--        android:label="@string/title_notification"-->
<!--        tools:layout="@layout/fragment_notification_list" >-->
<!--        <argument-->
<!--            android:name="deviceID"-->
<!--            app:argType="string"-->
<!--            android:defaultValue="" />-->
<!--        <argument-->
<!--            android:name="deviceName"-->
<!--            app:argType="string"-->
<!--            android:defaultValue="" />-->
<!--    </fragment>-->

</navigation>
