<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"></ImageView>

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow android:layout_marginTop="12dp">

            <TextView
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:text="@string/activity_notification_name"></TextView>

            <TextView
                android:id="@+id/textView_name"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"></TextView>
        </TableRow>

        <TableRow android:layout_marginTop="12dp">

            <TextView
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:text="@string/activity_notification_temperature"></TextView>

            <TextView
                android:id="@+id/textView_temperature"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"></TextView>
        </TableRow>

        <TableRow android:layout_marginTop="12dp">

            <TextView
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:text="@string/activity_notification_time"></TextView>

            <TextView
                android:id="@+id/textView_time"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"></TextView>
        </TableRow>

        <TableRow android:layout_marginTop="12dp">

            <TextView
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:text="@string/activity_notification_mask"></TextView>

            <TextView
                android:id="@+id/textView_mask"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"></TextView>
        </TableRow>


    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>